slurms_jobs/logs/Falcon-H1-3B_inbal-278195_31.err
  File "/vol/joberant_nobck/data/NLP_368307701_2526a/inbalmoryles/100reps/run_layer_experiments.py", line 360
    model_kwargs.pop("load_in_8bit", None)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
